--- a/.env.sample
+++ b/.env.sample
@@ -2,8 +2,8 @@ PORT=3000
 LD_LIBRARY_PATH:lib/native
 
 
-SEARCHIFY_API_URL=http://:UiwaH0fdW2WIEM@8bxb8.api.searchify.com
-SEARCHIFY_API_INDEX=idx
+SEARCHIFY_API_URL=searchify api url goes here
+SEARCHIFY_API_INDEX=api index goes here
 
 BHT_API_KEY=api key goes here
 
