[WIP] remove hard coded links

--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,6 @@ S3_SECRET=secret key here
 KISSMETRICS_API_KEY=kissmetrics key here
 
 GOOGLE_ANALYTICS_KEY=google analytics key here
+
+
+OFFICIAL_GOVERMENT_URL=oaklandnet.com
