clean up hard coded names

--- a/.env.sample
+++ b/.env.sample
@@ -2,7 +2,7 @@ PORT=3000
 LD_LIBRARY_PATH:lib/native
 
 
-SEARCHIFY_API_URL=http://:UiwaH0fdW2WIEM@8bxb8.api.searchify.com
+SEARCHIFY_API_URL=http://:xxxxxx@xxxxx.api.searchify.com
 SEARCHIFY_API_INDEX=idx
 
 BHT_API_KEY=api key goes here
@@ -16,4 +16,7 @@ KISSMETRICS_API_KEY=kissmetrics key here
 GOOGLE_ANALYTICS_KEY=google analytics key here
 
 
-OFFICIAL_GOVERMENT_URL=oaklandnet.com
+OFFICIAL_CITY_NAME=city name
+OFFICIAL_SITE_TITLE=city name answers
+OFFICIAL_GOVERMENT_URL=http://example.gov
+OFFICIAL_CONTACT_MAIL=contact@example.gov
