background image is now a env variable

--- a/.env.sample
+++ b/.env.sample
@@ -15,7 +15,7 @@ KISSMETRICS_API_KEY=kissmetrics key here
 
 GOOGLE_ANALYTICS_KEY=google analytics key here
 
-
+BACKGROUND_IMAGE="/assets/background_image.jpg"
 OFFICIAL_CITY_NAME=city name
 OFFICIAL_SITE_TITLE=city name answers
 OFFICIAL_GOVERMENT_URL=http://example.gov
