--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,3 @@
-
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-
 login: &login
   username: hnl
   password: test44
@@ -12,29 +5,22 @@ login: &login
 # This line is not compatible with the gem 'taps' used to sync the dataabse with heroku
 <%= file = File.join(Rails.root, "config", "dblogin.yml")
     IO.read(file) if File.exist?(file) %>
-  
+
 development:
   adapter: postgresql
   encoding: unicode
-  database: honoluluanswers_dev
+  database: oakland_answers_dev
+  username: oakland_answers
   host: localhost
-  pool: 5
-  timeout: 5000
-  <<: *login
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  database: oakland_answers_test
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: honoluluanswers
+  database: oakland_answers_production
   host: localhost
   pool: 5
   timeout: 5000
