--- a/config/database.yml
+++ b/config/database.yml
@@ -12,11 +12,12 @@ login: &login
 # This line is not compatible with the gem 'taps' used to sync the dataabse with heroku
 <%= file = File.join(Rails.root, "config", "dblogin.yml")
     IO.read(file) if File.exist?(file) %>
-  
+
 development:
   adapter: postgresql
   encoding: unicode
-  database: honoluluanswers_dev
+  database: oakland_answers_dev
+  username: oakland_answers
   host: localhost
   pool: 5
   timeout: 5000
@@ -26,15 +27,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  database: oakland_answers_test
 
 production:
   adapter: postgresql
   encoding: unicode
-  database: honoluluanswers
+  database: oakland_answers_production
   host: localhost
   pool: 5
   timeout: 5000
