Commit .env because it makes sense to have it in dev and test environments

--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
 PORT=3000
-LD_LIBRARY_PATH:lib/native
 
+SEARCHIFY_API_URL="http://:erica@blah.api.indextank.com"
+SEARCHIFY_API_INDEX="meow"
 
-SEARCHIFY_API_URL=searchify api url goes here
-SEARCHIFY_API_INDEX=api index goes here
-
-BHT_API_KEY=api key goes here
+BHT_API_KEY="meow"
 
 S3_BUCKET=bucket for author pics
 S3_KEY=amazon s3 for author pics
