secret token no longer tracked in version control

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=3000
 
+SECRET_TOKEN="use `rake secret` to generate this"
+
 SEARCHIFY_API_URL="http://:erica@blah.api.indextank.com"
 SEARCHIFY_API_INDEX="meow"
 
