Adds coveralls to app and badge to readme

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,24 @@
-PORT=3000
+BACKGROUND_IMAGE=/assets/background_image.jpg
 
-SECRET_TOKEN="use `rake secret` to generate this"
+BHT_API_KEY=bht_api_key
 
-SEARCHIFY_API_URL="http://:erica@blah.api.indextank.com"
-SEARCHIFY_API_INDEX="meow"
+GOOGLE_ANALYTICS_KEY=google_analytics_key
 
-BHT_API_KEY="meow"
+KISSMETRICS_API_KEY=kissmetrics_api_key
 
-S3_BUCKET=bucket for author pics
-S3_KEY=amazon s3 for author pics
-S3_SECRET=secret key here
-
-KISSMETRICS_API_KEY=kissmetrics key here
-
-GOOGLE_ANALYTICS_KEY=google analytics key here
-
-BACKGROUND_IMAGE="/assets/background_image.jpg"
 OFFICIAL_CITY_NAME=city name
 OFFICIAL_SITE_TITLE=city name answers
 OFFICIAL_GOVERNMENT_URL=http://example.gov
 OFFICIAL_CONTACT_MAIL=contact@example.gov
 OFFICIAL_STYLE_GUIDE=http://link.to.doc
+
+PORT=3000
+
+S3_BUCKET=s3_bucket
+S3_KEY=s3_key
+S3_SECRET=s3_secret
+
+SEARCHIFY_API_URL=searchify_api_url
+SEARCHIFY_API_INDEX=answers
+
+SECRET_TOKEN=use `rake secret` to generate this
